feature run as main

--- a/notebooks/MarketData testing.ipynb
+++ b/notebooks/MarketData testing.ipynb
@@ -101,7 +101,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:interactive-analysis] *",
+   "display_name": "Python [conda env:interactive-analysis]",
    "language": "python",
    "name": "conda-env-interactive-analysis-py"
   },
