--- a/notebooks/CandleStickHistory.ipynb
+++ b/notebooks/CandleStickHistory.ipynb
@@ -795,7 +795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python [conda env:root]",
    "language": "python",
    "name": "conda-root-py"
   },
@@ -809,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
