--- a/notebooks/Candlestick.ipynb
+++ b/notebooks/Candlestick.ipynb
@@ -2814,7 +2814,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python [conda env:root]",
    "language": "python",
    "name": "conda-root-py"
   },
@@ -2828,7 +2828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
