create_feature_from_one_dim_data refactor the name and add volume analysis

--- a/notebooks/Training_Data_Viewer.ipynb
+++ b/notebooks/Training_Data_Viewer.ipynb
@@ -163,6 +163,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "18837007",
    "metadata": {},
@@ -432,6 +433,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6902c10c",
    "metadata": {},
@@ -447,7 +449,7 @@
    "outputs": [],
    "source": [
     "from crypto_feature_preprocess.port.features import (\n",
-    "    create_feature_from_close_price\n",
+    "    create_feature_from_one_dim_data\n",
     ")\n",
     "from crypto_feature_preprocess.port.interfaces import (\n",
     "    Feature_Definition,\n",
@@ -491,10 +493,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features, feature_breakdown = create_feature_from_close_price(ohlcv_candles=pick_df, feature_pools=feature_spec_pools)"
+    "features, feature_breakdown = create_feature_from_one_dim_data(price_vector=pick_df[\"close\"], feature_pools=feature_spec_pools)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c942c01-32dc-45c5-b6ba-1a34f373467c",
    "metadata": {},
@@ -536,6 +539,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "abe8405b-ded2-46f7-ad0e-4a115a8c3539",
    "metadata": {},
@@ -3376,6 +3380,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e714c197-52d2-49ec-ba62-c881588562ee",
    "metadata": {},
